# machine-learning

Digit Recognizer/: pyproject.toml  requirements.txt
Digit_Recognizer/: app.py  requirements.txt.txt
